syntax = "proto3";
package com.example.grpc;

import "information.proto";

message BaseRequest {
  string playerId = 1;
  int64 timestamp = 2;
}

service HiderService {
  rpc requestBaseAccess(BaseRequest) returns (Ack);
  rpc sendBackAck(Ack) returns (Ack);
}